# Sherman-Morrison

./: .gitignore  .gitmodules  Helpers.hpp  Helpers_mod.f90  Makefile  Makefile.verificarlo  Makefile.vfc_ci  QMCChem_dataset_test.f90  QMCChem_dataset_test.m  README.md  SM-MaponiA3.cpp  SM-MaponiA3.hpp  SMMaponiA4.m  SM_MaponiA3.cpp  SM_MaponiA3.hpp  SM_MaponiA3_f.cpp  SM_MaponiA3_f.hpp  SM_MaponiA3_mod.f90  Utils_mod.f90  build.sh  cMaponiA3_test_3x3_3.cpp  cppmain.cpp  det.irp.f  fMaponiA3_test.f90  fMaponiA3_test.f90.org  fMaponiA3_test_3x3_3.f90  fMaponiA3_test_4x4_2  fMaponiA3_test_4x4_2.f90  fmain.f90  libqmckl.la  libqmckl.so.0  libqmckl.so.0.0.0  main.cpp  qmckl.h  runtests.sh  smvars.sh  smvarsrc  todo.txt  vfc_ci  vfc_ci_cycles.txt  (+1 more)
.github/workflows/: compile.yml  random_generator_compile.yml  vfc_test_workflow.yml
Octave-tests/: SM-Coppens-1.m  SMMaponiA3.m
ci/: serve.py  setup.py  test.py
ci/vfc_ci_report/: compare_runs.py  helper.py  inspect_runs.py  main.py  plot.py
datasets/: ci_dataset.hdf5
include/: Helpers.hpp  SMWB.hpp  SM_Helpers.hpp  SM_Maponi.hpp  SM_MaponiA3.hpp  SM_MaponiA3S.hpp  SM_Standard.hpp  Woodbury.hpp  vfc_hashmap.h  vfc_probe.h
independent_test_harness/: Makefile  Makefile.icc_mkl.cpu  Makefile.icc_mkl_sequential.cpu  Makefile.icc_mkl_threaded.cpu  Makefile.nvc_ompol.gpu  Test_method.md  block  cblasdgemm_vs_cublasdgemm_test.c  check_result.sh  condition_numbers.py  cycles.h  dataset_15784d_zeropadded_cm.hdf5  dataset_329d_zeropadded_cm.hdf5  debug.h  detupdate21.f90  gen_list_update_cycles.sh  gen_plot.sh  get_stats.m  get_stats.m.old  goto_gpu_node.sh  helper.c  helper.h  kay  kernels.c  kernels.h  meuk.c  meuk.h  mkl  nvtx.h  run_tests.sh  sm.c  test.c  test.c.old  test.c.older  three
mwe/: compile.sh  main.cpp  main.f90  worker.cpp  worker.h
octave-tests/: QMCChem_dataset_test.m
random_generator/: .clang-format  .gitignore  CMakeLists.txt  README.md
random_generator/headers/: Engine.hpp  EngineModeExecutor.hpp  MatrixSizeExecutor.hpp  UpdateCountExecutor.hpp
random_generator/headers/cycle_generation/: CApi.h  Cycle.hpp  CycleGenerator.hpp  Matrix.hpp  SizedBasedCycleStream.hpp  hdf5CycleOutputStream.hpp
random_generator/headers/cycle_generation/update_generation/: ChainedUpdatePlanner.hpp  UpdateDescriptor.hpp  UpdateGenerator.hpp  UpdateMatrix.hpp  UpdateMatrixGenerator.hpp  UpdatePlan.hpp  UpdatePlanner.hpp
random_generator/src/: CMakeLists.txt  Engine.cpp  MatrixSizeExecutor.cpp  UpdateCountExecutor.cpp  c_api_test.c  main.cpp  versioning.h.in
random_generator/src/cycle_generation/: CApi.cpp  CMakeLists.txt  CycleGenerator.cpp  Matrix.cpp  SizedBasedCycleStream.cpp  hdf5CycleOutputStream.cpp
random_generator/src/cycle_generation/update_generation/: CMakeLists.txt  ChainedUpdatePlanner.cpp  UpdateDescriptor.cpp  UpdateGenerator.cpp  UpdateMatrix.cpp  UpdateMatrixGenerator.cpp  UpdatePlan.cpp
src/: Helpers.cpp  SMWB.cpp  SM_Helpers.cpp  SM_Maponi.cpp  SM_MaponiA3.cpp  SM_MaponiA3S.cpp  SM_MaponiA3_mod.f90  SM_Standard.cpp  SM_mod.f90  Woodbury.cpp  det.irp.f  finterface_mod.f90  helpers_mod.f90
tests/: QMCChem_dataset_test.f90  cMaponiA3_test_3x3_3.cpp  convert-to-h5.py  fnu_test_h5.cpp  qmckl_test_c.cpp  qmckl_test_h5.cpp  run_test.sh  test.cpp  test_external_h5.cpp  test_h5.cpp  test_internal_h5.cpp  vfc_test_h5.cpp
tools/: convert-to-h5.py  extract-from-h5.py  matrix_properties.py  restyle.sh  stats.py
(+27 files in other folders)
